# src/api/v1/routes/index.js
@@ -5,5 +5,6 @@ const router = express.Router();
 
 router.use('/congressperson', require('./congressperson'));
 router.use('/parliamentary-group', require('./parliamentary-group'));
+router.use('/search', require('./search'));
 
 module.exports = router;
