# src/api/v1/routes/search/index.js
@@ -1,0 +1,10 @@
+'use strict';
+
+const express = require('express');
+const searchController = require('./search.controller');
+
+const router = express.Router();
+
+router.get('/', searchController.getSearchResults);
+
+module.exports = router;
