# src/docs/v1/swagger.json
@@ -28,7 +28,7 @@
   "paths": {
     "/api/congressperson": {
       "get": {
-        "summary": "Returns information about congresspeople. If a query parameter is not defined, returns the complete list of congresspeople. Otherwise return the information about a specific congressperson. Accepts 'cv_id' and 'id_dni' as parameters, but in case are both provided, the cv_id takes precedence.",
+        "summary": "Returns information about congresspeople. If a query parameter is not defined, returns the complete list of congresspeople. Otherwise return the information about a specific congressperson. Accepts 'id_dni' as a parameter.",
         "parameters": [
           {
             "in": "query",
@@ -101,7 +101,7 @@
 
     "/api/parliamentary-group": {
       "get": {
-        "summary": "Returns information about parliamentary groups. If a query parameter is not defined, returns the complete list of parliamentary groups. Otherwise return the information about a specific parliamentary group. Accepts 'slug' and 'parliamentary_group_name' as parameters, but in case are both provided, the slug takes precedence.",
+        "summary": "Returns information about parliamentary groups. If a query parameter is not defined, returns the complete list of parliamentary groups. Otherwise return the information about a specific parliamentary group. Accepts 'parliamentary_group_name' as a parameter.",
         "parameters": [
           {
             "in": "query",
@@ -161,6 +161,39 @@
               "type": "string"
             },
             "required": true
+          }
+        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+
+    "/api/search": {
+      "get": {
+        "summary": "Search for a word in multiple tables using 'query' as the word to search on the database. Use the 'limit' query parameter to limit the number of results on the search, if not provided uses 3 as default.",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "query",
+            "description": "String used to search on the database.",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "description": "Limit of results obtained for each table search.",
+            "schema": {
+              "type": "integer"
+            },
+            "required": false
           }
         ],
         "consumes": ["application/json"],
